# obs_demo

./: .gitignore  .gitmodules  LICENSE  README.md  settings.mk
images/: .gitignore  Makefile  degate_detect.lyp  extract.py  layerfx.scm  make_real.py  make_real.scm  make_real_gatelib.py  make_toon.py  minilexer.py  sky130_toon.lyp
lib/: sky130.allcells  sky130.cells  sky130.ckt  sky130.gds  sky130.lef  sky130.lib  sky130.lvs  sky130.tlef  sky130.v  sky130_degate_detect.lyp  sky130_real.lyp  sky130_settings.py  sky130_settings.tcl  sky130_util.py
pnr/: Makefile
pnr/tcl/: pnr.tcl
rev/: .gitignore  Makefile
rev/src/: CMakeLists.txt  create_degate.cpp  run_template_matching.cpp
signoff/: Makefile
signoff/tcl/: klayout_gds_drc_check.py  run_magic_drc.tcl
syn/: Makefile
syn/tcl/: aleatorize.py
